; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/carlu/src/extr_usb.c_carlusb_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/carlu/src/extr_usb.c_carlusb_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.carlu = type { i32, i32, i32 }

@.str = private unnamed_addr constant [20 x i8] c"==>release device.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.carlu*)* @carlusb_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @carlusb_destroy(%struct.carlu* %0) #0 {
  %2 = alloca %struct.carlu*, align 8
  %3 = alloca i32, align 4
  store %struct.carlu* %0, %struct.carlu** %2, align 8
  %4 = call i32 @dbg(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %5 = load %struct.carlu*, %struct.carlu** %2, align 8
  %6 = getelementptr inbounds %struct.carlu, %struct.carlu* %5, i32 0, i32 0
  store i32 1, i32* %6, align 4
  %7 = load %struct.carlu*, %struct.carlu** %2, align 8
  %8 = call i32 @carlusb_cancel_rings(%struct.carlu* %7)
  %9 = load %struct.carlu*, %struct.carlu** %2, align 8
  %10 = getelementptr inbounds %struct.carlu, %struct.carlu* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @SDL_WaitThread(i32 %11, i32* %3)
  %13 = load %struct.carlu*, %struct.carlu** %2, align 8
  %14 = call i32 @carlusb_free_rings(%struct.carlu* %13)
  %15 = load %struct.carlu*, %struct.carlu** %2, align 8
  %16 = getelementptr inbounds %struct.carlu, %struct.carlu* %15, i32 0, i32 1
  %17 = call i32 @list_del(i32* %16)
  ret void
}

declare dso_local i32 @dbg(i8*) #1

declare dso_local i32 @carlusb_cancel_rings(%struct.carlu*) #1

declare dso_local i32 @SDL_WaitThread(i32, i32*) #1

declare dso_local i32 @carlusb_free_rings(%struct.carlu*) #1

declare dso_local i32 @list_del(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
